--- a/.gitconfig
+++ b/.gitconfig
@@ -36,3 +36,5 @@
   pretty = format:"%C(auto,yellow)commit %H%C(auto,reset)\nAuthor: %an <%ae>\nDate:   %cd\n\n%w(0,4,4)%B"
 [log]
     date = local
+[core]
+	excludesfile = /Users/colinvl/.gitignore_global
