--- a/.editorconfig
+++ b/.editorconfig
@@ -18,3 +18,8 @@ indent_size = 2
 # For Python, default to tab spaces of 4
 [*.py]
 indent_size = 4
+
+
+# For HTML, default to tab spaces of 4
+[*.html]
+indent_size = 4
