--- a/tmux.conf
+++ b/tmux.conf
@@ -38,6 +38,12 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
+# Bind vim commands to also switch panes
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 # Bind Shift + Arros to switch windows
 bind -n S-Left previous-window
 bind -n S-Right next-window
@@ -61,5 +67,5 @@ set -g window-status-current-fg black
 set -g window-status-current-attr bold
 set -g status-interval 60
 set -g status-left-length 30
-set -g status-left '#[fg=green]#(whoami)'
+set -g status-left '#[fg=green]#(whoami) :: '
 set -g status-right "#[fg=blue]#S #I:#P  #[fg=yellow]%d %b %Y #[fg=green]%l:%M %p"
