--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,8 @@ set-window-option -g utf8 on
 
 # set vim keybindings
 setw -g mode-keys vi
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
 
 # Automatic renaming
 setw -g automatic-rename on
@@ -50,7 +52,10 @@ bind - split-window -v
 
 
 # Enable mouse switching
-set-option -g mouse-select-pane on
+set -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
 
 # Reload tmux config
 bind r source-file ~/.tmux.conf
