small vim tweaks for navigation

--- a/tmux.conf
+++ b/tmux.conf
@@ -52,10 +52,10 @@ bind - split-window -v
 
 
 # Enable mouse switching
-set -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+# set -g mode-mouse on
+# set -g mouse-select-pane on
+# set -g mouse-resize-pane on
+# set -g mouse-select-window on
 
 # Reload tmux config
 bind r source-file ~/.tmux.conf
