--- a/tmux.conf
+++ b/tmux.conf
@@ -31,16 +31,25 @@ unbind C-b
 set -g prefix C-a
 
 # Bind Alt + [hjkl] to switch panes
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+# bind -n M-h select-pane -L
+# bind -n M-j select-pane -D
+# bind -n M-k select-pane -U
+# bind -n M-l select-pane -R
 
-# Bind vim commands to also switch panes
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind-key -T copy-mode-vi C-h select-pane -L
+bind-key -T copy-mode-vi C-j select-pane -D
+bind-key -T copy-mode-vi C-k select-pane -U
+bind-key -T copy-mode-vi C-l select-pane -R
+bind-key -T copy-mode-vi C-\ select-pane -l
 
 # Bind Shift + Arros to switch windows
 bind -n S-Left previous-window
@@ -50,12 +59,6 @@ bind -n S-Right next-window
 bind \ split-window -h
 bind - split-window -v
 
-
-# Enable mouse switching
-# set -g mode-mouse on
-# set -g mouse-select-pane on
-# set -g mouse-resize-pane on
-# set -g mouse-select-window on
 
 # Reload tmux config
 bind r source-file ~/.tmux.conf
@@ -69,4 +72,4 @@ set -g window-status-current-attr bold
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=green]#(whoami) :: '
-set -g status-right "#[fg=blue]#S #I:#P  #[fg=yellow]%d %b %Y #[fg=green]%l:%M %p"
+set -g status-right "#[fg=yellow]%d %b %Y #[fg=green]%l:%M %p"
