--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "vim/bundle/Vundle.vim"]
 	path = vim/bundle/Vundle.vim
 	url = https://github.com/VundleVim/Vundle.vim.git
+[submodule "pure"]
+	path = pure
+	url = https://github.com/sindresorhus/pure
+[submodule "fonts"]
+	path = fonts
+	url = https://github.com/powerline/fonts
