--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,7 @@ set -g default-terminal "screen-256color"
 set -g history-limit 10000
 
 # utf8 support
-set-window-option -g utf8 on
+# set-window-option -g utf8 on
 
 # set vim keybindings
 setw -g mode-keys vi
@@ -64,12 +64,14 @@ bind - split-window -v
 bind r source-file ~/.tmux.conf
 
 # THEME
-set -g status-bg black
-set -g status-fg white
-set -g window-status-current-bg white
-set -g window-status-current-fg black
-set -g window-status-current-attr bold
-set -g status-interval 60
-set -g status-left-length 30
-set -g status-left '#[fg=green] #(whoami) :: '
-set -g status-right "#[fg=yellow]%d %b %Y #[fg=green]%l:%M %p "
+# set -g status-bg black
+# set -g status-fg white
+# set -g window-status-current-bg white
+# set -g window-status-current-fg black
+# set -g window-status-current-attr bold
+# set -g status-interval 60
+# set -g status-left-length 30
+# set -g status-left '#[fg=green] #(whoami) :: '
+# set -g status-right "#[fg=yellow]%d %b %Y #[fg=green]%l:%M %p "
+
+source-file "${HOME}/dotfiles/tmux-themepack/powerline/block/cyan.tmuxtheme"
