--- a/tmux.conf
+++ b/tmux.conf
@@ -55,6 +55,12 @@ bind-key -T copy-mode-vi C-\ select-pane -l
 bind -n S-Left previous-window
 bind -n S-Right next-window
 
+# Bind Ctrl + Arrows to resize panes
+bind -n C-Left resize-pane -L
+bind -n C-Right resize-pane -R
+bind -n C-Up resize-pane -U
+bind -n C-Down resize-pane -D
+
 # use PREFIX | to split window horizontally and PREFIX - to split vertically
 bind \ split-window -h
 bind - split-window -v
