--- a/tmux.conf
+++ b/tmux.conf
@@ -61,6 +61,12 @@ bind -n C-Right resize-pane -R
 bind -n C-Up resize-pane -U
 bind -n C-Down resize-pane -D
 
+# Also bind Ctrl + Shift + Arrows
+bind -n C-S-Left resize-pane -L
+bind -n C-S-Right resize-pane -R
+bind -n C-S-Up resize-pane -U
+bind -n C-S-Down resize-pane -D
+
 # use PREFIX | to split window horizontally and PREFIX - to split vertically
 bind \ split-window -h
 bind - split-window -v
