--- a/tmux.conf
+++ b/tmux.conf
@@ -9,8 +9,12 @@ set -g history-limit 10000
 
 # set vim keybindings
 setw -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+# bind-key -t vi-copy 'v' begin-selection
+# bind-key -t vi-copy 'y' copy-selection
+
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
+bind-key -T copy-mode-vi 'r' send-keys -X rectangle-toggle
 
 # Automatic renaming
 setw -g automatic-rename on
