--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,7 @@
 # setup 256 color
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
+set -as terminal-features "*:RGB"
 
 # increase scrollback
 set -g history-limit 10000
@@ -74,6 +76,10 @@ bind -n C-S-Down resize-pane -D
 bind '\' split-window -h
 bind '-' split-window -v
 
+# Use terminal default background for active window
+setw -g window-active-style 'fg=colour252,bg=#1f272c'
+# Dim inactive windows
+setw -g window-style 'fg=colour247,bg=#2a3339'
 
 # Reload tmux config
 bind r source-file ~/.tmux.conf
